   - GuidedInputBin: review account tooltip and message area (todo #1114).
   - GuidedInputBin: review amount column width (todo #1115).
   - Miscellaneous menu: have an option to display the collector content (todo #562).
   - Miscellaneous menu: have an option to display the audit trace (todo #732).
   - myICollector: cleanup the stores at end.
   - OpeTemplateProperties: account tooltip is account label (todo #1105).
   - OpeTemplateProperties: review account column width (todo #1108).
   - Recurrent operations are able to use OpeTemplate macros (todo #1116).
   - RecurrentRun validation: improve message (todo #1121).
   - TVAForm: label is now mandatory.
   - TVAStyle: style the VAT declarations.
   - Review (re-check+setup) all integrity constraints. 
 
 Bug fixes:

   - AccountsChart: fix reordering of children of a renumbered account (todo #1104).
   - AccountSelect, OpeTemplateSelect: fix hub finalization (todo #1106).
   - EntryPage: check strings before compare (todo #1113). 
   - FormulaEngine: fix nested parenthese evaluation (todo #1107).
   - Hub: disconnect handlers from long-life single objects.
   - ICollector: do not insert twice the first record of a dataset (todo #1119).
   - IExportable/IImportable types: have BAT files at end of the list (todo #1125).
   - ImporterPdfLcl: fix PDF import (todo #1124).
   - BatStore: propagates account and currency identifier changes.
   - LedgerStore: propagates currency identifier change.
   - OpeTemplateStore: propagates ledger and account identifier changes.
   - Periodicity: fix 31 day label (todo #1118).
   - RecurrentModel: propagates OpeTemplate identifier change (todo #1128).
   - TVAFormStore: propagates OpeTemplate identifier change (todo #1127).

 Other changes:

   - myIWindow::hide_on_close: removed property (todo #1111).
   - ofa_account_frame_bin_get_account_store(): new method.
   - ofaITreeAdder: new interface to add a column to a TreeStore.