@@ -340,9 +340,6 @@
 1112 2016- 5- 6 iWindow::is_destroy_allowed should be avoided
                 rather close_all_but()
 
-1117 2016- 5- 6 OpeTemplateTreeView: have an indicator that this ope
-                template is used as a recurrent model
-
 1122 2016- 5- 7 Recurrent: waiting operations treeview should display an
                 amount, letting this amount be edited
 
@@ -1319,6 +1316,9 @@
                 generated operations, and interpreted by operations
                 use case: have a month label in the entry label
      2016- 5-10 the %DOMY macro does the job and already exists
+
+1117 2016- 5- 6 OpeTemplateTreeView: have an indicator that this ope
+                template is used as a recurrent model
 
 1118 2016- 5- 6 BUG Periodicity: has twice 30
      2016- 5- 7 fixed
